LIMA-355 - Increasing contest standings scroll zone max-height to avoid scrollbar in initial view

--- a/compiled/css/style.css
+++ b/compiled/css/style.css
@@ -17630,7 +17630,7 @@ main .matches-widgets td.content span.empty {
   margin-bottom: 5px;
 }
 .contest-standings .table-scroll {
-  max-height: 550px;
+  max-height: 570px;
   overflow: auto;
 }
 .predictions-filter label {
