--- a/compiled/css/style_split_2.css
+++ b/compiled/css/style_split_2.css
@@ -7307,7 +7307,7 @@ main .matches-widgets td.content span.empty {
 }
 
 .contest-standings .table-scroll {
-  max-height: 550px;
+  max-height: 570px;
   overflow: auto;
 }
 
