--- a/src/css/less/livescore/rules/user-dashboard/ls-user-dashboard-general.less
+++ b/src/css/less/livescore/rules/user-dashboard/ls-user-dashboard-general.less
@@ -236,7 +236,7 @@
 	}
 
 	.table-scroll{
-		max-height: 550px;
+		max-height: 570px;
 		overflow: auto;
 	}
 }
